--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   isar: ^3.1.0+1
   isar_flutter_libs: ^3.1.0+1
   path_provider: ^2.0.15
+  bloc: ^8.1.1
+  flutter_bloc: ^8.1.2
+  connectivity_plus: ^4.0.0
 
 dev_dependencies:
   flutter_test:
