--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   bloc: ^8.1.1
   flutter_bloc: ^8.1.2
   connectivity_plus: ^4.0.0
+  shimmer: ^2.0.0
 
 dev_dependencies:
   flutter_test:
